# movies-db

./: .gitignore  README.md  build_docker_images.sh  docker-compose.yml
.github/workflows/: builld.yml  react.yml  react_test.yml  rust.yml  rust_test.yml  test.yml  test_movies_db_preview.yml  test_movies_db_service.yml
docker/: Dockerfile.movies-db-gateway  Dockerfile.movies-db-preview  Dockerfile.movies-db-service  Dockerfile.movies-db-ui
docker/gateway/: gateway.conf
docker/service/: start_movie_service.sh
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  backend.yaml  gateway.yaml  ui.yaml
helm/templates/tests/: test-ui.yaml
kubernetes/: movies-db-gateway.yml  movies-db-service.yml  movies-db-ui.yml
movies-db-preview/: Cargo.toml
movies-db-preview/movies-db-preview/: Cargo.toml
movies-db-preview/movies-db-preview-cli/: Cargo.toml
movies-db-preview/movies-db-preview-cli/src/: main.rs  options.rs
movies-db-preview/movies-db-preview/src/: error.rs  lib.rs  options.rs
movies-db-preview/movies-db-preview/src/service/: mod.rs  service_handler.rs  service_impl.rs
movies-db-service/: Cargo.toml  build_with_rust.sh
movies-db-service/movies-db/: Cargo.toml
movies-db-service/movies-db-cli/: Cargo.toml
movies-db-service/movies-db-cli/src/: main.rs  options.rs
movies-db-service/movies-db/src/: error.rs  lib.rs  options.rs  service.rs
movies-db-service/movies-db/src/db/: id.rs  mod.rs  movies_index.rs  simple_movies_index.rs  sqlite_movies_index.rs
movies-db-service/movies-db/src/service/: ffmpeg.rs  mod.rs  preview_generator.rs  service.rs  service_handler.rs  service_impl.rs
movies-db-service/movies-db/src/storage/: file_storage.rs  mod.rs  movies_storage.rs
movies-db-service/movies-db/tests/: ffmpeg_test.rs
movies-db-ui/: .env  package-lock.json  package.json
movies-db-ui/public/: index.html
movies-db-ui/src/: App.css  App.tsx  index.css
movies-db-ui/src/components/: AddVideoDialog.tsx  LoadingDialog.tsx  Search.tsx  VideoCard.tsx  VideoListFilters.tsx  VideoPlayer.tsx  VideosList.tsx  YesNoDialog.tsx
movies-db-ui/src/service/: service.ts  types.ts
tools/file-upload/: index.html
