[package]
name = "movies-db-preview-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
movies-db-preview = { path = "../movies-db-preview" }
log = "0.4"
anyhow = "1.0"
simple-logging = "2.0"
clap = { version = "4.2", features = ["derive"] }
actix-web = "4"
