[package]
name = "movies-db-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
movies-db = { path = "../movies-db" }
log = "0.4"
anyhow = "1.0"
env_logger = "0.10"
chrono = { version = "0.4" }
clap = { version = "4.2", features = ["derive"] }
actix-web = "4"
