[package]
name = "movies-db"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
quick-error = "2.0"
itertools = "0.11"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
wildmatch = "2.1"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }

[dev-dependencies]
tempdir = "0.3"
serde_json = "1.0"
