[package]
name = "movies-db"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
quick-error = "2.0"
itertools = "0.11"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4"
wildmatch = "2.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempdir = "0.3"
serde_json = "1.0"
