[package]
name = "movies-db"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
quick-error = "2.0"
itertools = "0.11"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
wildmatch = "2.1"
actix-web = "4"
actix-multipart = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
actix-cors = "0.6"
rusqlite = { version = "0.29", features = ["bundled"] }

[dev-dependencies]
tempdir = "0.3"
serde_json = "1.0"
